--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1541,6 +1541,22 @@
     "@recommendation_copied_to_clipboard": {
         "description": "Snackbar message after copying to clipboard"
     },
+    "recommendation_campaign_shared_alert_title": "Link already shared?",
+    "@recommendation_campaign_shared_alert_title": {
+        "description": "Title of the alert after copying the campaign link"
+    },
+    "recommendation_campaign_shared_alert_description": "Have you already shared the copied link? Then tracking will be set up in the recommendation manager.",
+    "@recommendation_campaign_shared_alert_description": {
+        "description": "Description of the alert after copying the campaign link"
+    },
+    "recommendation_campaign_shared_alert_yes_button": "Yes, already shared",
+    "@recommendation_campaign_shared_alert_yes_button": {
+        "description": "Confirm button of the campaign shared alert"
+    },
+    "recommendation_campaign_shared_alert_no_button": "Not yet",
+    "@recommendation_campaign_shared_alert_no_button": {
+        "description": "Cancel button of the campaign shared alert"
+    },
     "recommendation_copy_template_button": "Copy template",
     "@recommendation_copy_template_button": {
         "description": "Button text for copying the message template with link"
