--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1442,6 +1442,10 @@
             }
         }
     },
+    "campaign_created_success": "The campaign was created successfully!",
+    "@campaign_created_success": {
+        "description": "Success message after creating a campaign"
+    },
     "recommendations_limit_reached_tooltip": "Recommendation limit reached",
     "@recommendations_limit_reached_tooltip": {
         "description": "Tooltip when the recommendation limit is reached"
@@ -1453,6 +1457,133 @@
     "recommendations_no_active_landingpage_warning": "No recommendations possible - You have no active landing page assigned",
     "@recommendations_no_active_landingpage_warning": {
         "description": "Warning when no active landing page is assigned"
+    },
+    "recommendation_section_type_title": "Type of recommendation",
+    "@recommendation_section_type_title": {
+        "description": "Title for section 1 - type of recommendation"
+    },
+    "recommendation_type_personalized": "Personalized",
+    "@recommendation_type_personalized": {
+        "description": "Label for personalized recommendation"
+    },
+    "recommendation_type_personalized_desc": "For specific customers with individual names and tracking.",
+    "@recommendation_type_personalized_desc": {
+        "description": "Description of personalized recommendation"
+    },
+    "recommendation_type_campaign": "Campaign",
+    "@recommendation_type_campaign": {
+        "description": "Label for campaign recommendation"
+    },
+    "recommendation_type_campaign_desc": "A universal link for newsletters or social media.",
+    "@recommendation_type_campaign_desc": {
+        "description": "Description of campaign recommendation"
+    },
+    "recommendation_section_create_title": "Create recommendation",
+    "@recommendation_section_create_title": {
+        "description": "Title for section 2 - create recommendation"
+    },
+    "recommendation_section_created_title": "Created recommendations",
+    "@recommendation_section_created_title": {
+        "description": "Title for section 3 - created recommendations"
+    },
+    "recommendation_add_button": "Add recommendation",
+    "@recommendation_add_button": {
+        "description": "Button text for adding a recommendation"
+    },
+    "recommendation_customer_name_placeholder": "Enter customer name...",
+    "@recommendation_customer_name_placeholder": {
+        "description": "Placeholder for the customer name field"
+    },
+    "recommendation_promoter_name_placeholder": "Enter promoter name...",
+    "@recommendation_promoter_name_placeholder": {
+        "description": "Placeholder for the promoter name field"
+    },
+    "recommendation_choose_reason_label": "Choose a reason (Landing page)",
+    "@recommendation_choose_reason_label": {
+        "description": "Label for the reason dropdown"
+    },
+    "recommendation_message_template": "Message template for {name}",
+    "@recommendation_message_template": {
+        "description": "Placeholder for the message template",
+        "placeholders": {
+            "name": {
+                "type": "String"
+            }
+        }
+    },
+    "recommendation_customer_subtitle": "Customer",
+    "@recommendation_customer_subtitle": {
+        "description": "Subtitle under the customer name"
+    },
+    "recommendation_count": "({count} recommendations)",
+    "@recommendation_count": {
+        "description": "Count of created recommendations",
+        "placeholders": {
+            "count": {
+                "type": "int",
+                "description": "Number of recommendations"
+            }
+        }
+    },
+    "recommendation_promoter_label": "Promoter",
+    "@recommendation_promoter_label": {
+        "description": "Label for the promoter info field"
+    },
+    "recommendation_landingpage_label": "Landing page",
+    "@recommendation_landingpage_label": {
+        "description": "Label for the landing page info field"
+    },
+    "recommendation_generate_link_button": "Generate link",
+    "@recommendation_generate_link_button": {
+        "description": "Button text for generating a general link"
+    },
+    "recommendation_campaign_link_title": "Generated link",
+    "@recommendation_campaign_link_title": {
+        "description": "Title of the section for the generated campaign link"
+    },
+    "recommendation_copied_to_clipboard": "Copied to clipboard",
+    "@recommendation_copied_to_clipboard": {
+        "description": "Snackbar message after copying to clipboard"
+    },
+    "recommendation_campaign_shared_alert_title": "Start campaign?",
+    "@recommendation_campaign_shared_alert_title": {
+        "description": "Title of the alert after copying the campaign link"
+    },
+    "recommendation_campaign_shared_alert_description": "Have you already copied and shared the link? Then tracking will be set up in the recommendation manager.",
+    "@recommendation_campaign_shared_alert_description": {
+        "description": "Description of the alert after copying the campaign link"
+    },
+    "recommendation_campaign_shared_alert_yes_button": "Yes, already shared",
+    "@recommendation_campaign_shared_alert_yes_button": {
+        "description": "Confirm button of the campaign shared alert"
+    },
+    "recommendation_campaign_shared_alert_no_button": "Not yet",
+    "@recommendation_campaign_shared_alert_no_button": {
+        "description": "Cancel button of the campaign shared alert"
+    },
+    "recommendation_copy_template_button": "Copy template",
+    "@recommendation_copy_template_button": {
+        "description": "Button text for copying the message template with link"
+    },
+    "campaign_start_button": "Start campaign",
+    "@campaign_start_button": {
+        "description": "Button text for starting a campaign"
+    },
+    "recommendation_campaign_name_placeholder": "Campaign name",
+    "@recommendation_campaign_name_placeholder": {
+        "description": "Placeholder for the campaign name field"
+    },
+    "recommendation_campaign_duration_placeholder": "Duration in days",
+    "@recommendation_campaign_duration_placeholder": {
+        "description": "Placeholder for the campaign duration field"
+    },
+    "recommendations_validation_missing_campaign_name": "Please enter a campaign name",
+    "@recommendations_validation_missing_campaign_name": {
+        "description": "Validation message when campaign name is missing"
+    },
+    "recommendations_validation_invalid_campaign_duration": "Please enter a duration between 1 and 30 days",
+    "@recommendations_validation_invalid_campaign_duration": {
+        "description": "Validation message when campaign duration is invalid"
     },
     "landingpage_pagebuilder_container_request_error": "An error occurred while retrieving the data",
     "@landingpage_pagebuilder_container_request_error": {
@@ -2296,6 +2427,14 @@
     "save_recommendation_loading_subtitle": "The recommendation is being saved",
     "@save_recommendation_loading_subtitle": {
         "description": "Subtitle of the loading dialog when saving a recommendation"
+    },
+    "save_campaign_loading_title": "Creating campaign",
+    "@save_campaign_loading_title": {
+        "description": "Title of the loading dialog when saving a campaign"
+    },
+    "save_campaign_loading_subtitle": "The campaign is being saved",
+    "@save_campaign_loading_subtitle": {
+        "description": "Subtitle of the loading dialog when saving a campaign"
     },
     "send_recommendation_alert_description": "Did you successfully send the recommendation to {receiver}? The link in the recommendation will only become valid once you confirm it here.",
     "@send_recommendation_alert_description": {
@@ -4289,5 +4428,57 @@
     "promoter_detail_not_found": "Promoter not found",
     "@promoter_detail_not_found": {
         "description": "Error message when promoter not found"
+    },
+    "campaign_manager_list_header_campaign_name": "Campaign Name",
+    "@campaign_manager_list_header_campaign_name": {
+        "description": "Header for campaign name column in campaign list"
+    },
+    "campaign_manager_list_header_conversion_rate": "Conversion Rate",
+    "@campaign_manager_list_header_conversion_rate": {
+        "description": "Header for conversion rate column in campaign list"
+    },
+    "campaign_manager_funnel_title": "Campaign Performance",
+    "@campaign_manager_funnel_title": {
+        "description": "Title of the campaign funnel section"
+    },
+    "campaign_manager_funnel_link_clicked": "Link Clicked",
+    "@campaign_manager_funnel_link_clicked": {
+        "description": "Label for link clicked stage in funnel"
+    },
+    "campaign_manager_funnel_contact_form": "Contact Form Sent",
+    "@campaign_manager_funnel_contact_form": {
+        "description": "Label for contact form stage in funnel"
+    },
+    "campaign_manager_funnel_appointment": "Appointment Scheduled",
+    "@campaign_manager_funnel_appointment": {
+        "description": "Label for appointment stage in funnel"
+    },
+    "campaign_manager_funnel_successful": "Completed",
+    "@campaign_manager_funnel_successful": {
+        "description": "Label for successful stage in funnel"
+    },
+    "campaign_manager_funnel_failed": "Not Completed",
+    "@campaign_manager_funnel_failed": {
+        "description": "Label for failed stage in funnel"
+    },
+    "campaign_manager_copy_link_tooltip": "Copy link",
+    "@campaign_manager_copy_link_tooltip": {
+        "description": "Tooltip for the copy link button in the campaign tile"
+    },
+    "campaign_manager_delete_tooltip": "Delete campaign",
+    "@campaign_manager_delete_tooltip": {
+        "description": "Tooltip for the delete campaign button"
+    },
+    "campaign_manager_delete_alert_title": "Delete campaign",
+    "@campaign_manager_delete_alert_title": {
+        "description": "Title of the delete campaign alert"
+    },
+    "campaign_manager_delete_alert_description": "Do you really want to delete this campaign? This action cannot be undone.",
+    "@campaign_manager_delete_alert_description": {
+        "description": "Description of the delete campaign alert"
+    },
+    "campaign_manager_delete_alert_delete_button": "Delete campaign",
+    "@campaign_manager_delete_alert_delete_button": {
+        "description": "Delete button in the delete campaign alert"
     }
 }
